--- a/members/tex/HealthForm.tex
+++ b/members/tex/HealthForm.tex
@@ -16,6 +16,7 @@
 \usepackage{pdfpages}
 
 \usepackage{multirow}
+\usepackage{setspace}
 
 
 \pagestyle{fancy}
@@ -78,13 +79,17 @@
 \begin{document}
 \sffamily
 \allsectionsfont{\sffamily}
+\linespread{1.3}
 \rhead{\projectTitle}
 \begin{table}
 \begin{tabular}{|p{2.5cm}p{5cm}|p{2.5cm}p{5cm}|}
 \hline
 
-\textbf{Child}  & Flora Pizey & \textbf{Gender} & Female \\
-\textbf{Date of Birth} & 2004-08-22   & & \\
+\textbf{Child}  & Flora Pizey & \textbf{Status} & Current \\
+\textbf{DoB} & 2004-08-22   & \textbf{Gender} & Female \\
+
+\hline
+\multicolumn{4}{p{15cm}}{ }\\
 
 \hline
 \textbf{Carer}  & Tim Pizey & \textbf{Mobile} &  07768894509 \\
@@ -98,7 +103,7 @@
 
 \hline
 
-\textbf{Alternative contact}   & Megan Ruddock &     &  \\
+\multicolumn{2}{|p{7.5cm}}{\textbf{Alternative contact}  } & \multicolumn{2}{|p{7.5cm}|}{Megan Ruddock } \\
 
 \textbf{Landline} & 018657777777 & \textbf{Mobile} & 07768 894509 \\
 
@@ -116,24 +121,44 @@
 \textbf{Diet} & \multicolumn{3}{p{12cm}|}{None}\\
 
 
-\multicolumn{2}{|p{7cm}}{\textbf{Any medicine regularly taken}}&\multicolumn{2}{p{7cm}|}{None }\\
-\multicolumn{2}{|p{7cm}}{\textbf{Any conditions we should be aware of}} &\multicolumn{2}{p{7cm}|}{None }\\
+\multicolumn{4}{|p{15cm}|}{\textbf{Any medicine regularly taken}}\\
+\multicolumn{4}{|p{15cm}|}{
+\begin{singlespace}
+None
+\end{singlespace}
+}\\
+\multicolumn{4}{|p{15cm}|}{\textbf{Anything else we need to know}}\\
+\multicolumn{4}{|p{15cm}|}{
+\begin{singlespace}
+No 
+\end{singlespace}
+}\\
 
 
 \hline
 \multicolumn{4}{|p{15cm}|}{\textbf{Privacy}}\\
 \multicolumn{4}{|p{15cm}|}{
+\begin{singlespace}
 We take photos of group activities and use these photos on the group website and similar materials. 
-The data on this form is held on a computer but is not publicly available.}\\
+The data on this form is held on a computer but is not publicly available.
+\end{singlespace}
+}\\
 \hline
 \multicolumn{4}{|p{15cm}|}{\textbf{Declaration}}\\
 \multicolumn{4}{|p{15cm}|}{
+\begin{singlespace}
 In case of emergency, and should leaders be unable to contact me for any reason, 
 I authorise them and medical staff to act on my behalf, 
-knowing that I will be informed as soon as possible.}\\
+knowing that I will be informed as soon as possible.
+\end{singlespace}
+}\\
 \hline
-
-Signed:  & Tim Pizey &  Date:  & 2013-04-014 \\
+\begin{doublespace}
+Signed:  
+\end{doublespace}
+&                 &  Date:  &  
+\\
+              & Tim Pizey &            & 2013-04-014 \\
 \hline
 \end{tabular}
 \label{tab:methodTypes}
